kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets-gopass-webhook
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: external-secrets-gopass-webhook
      app.kubernetes.io/name: external-secrets-gopass-webhook
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: external-secrets-gopass-webhook
        app.kubernetes.io/name: external-secrets-gopass-webhook
    spec:
      restartPolicy: Always
      containers:
      - name: external-secrets-gopass-webhook
        image: ghcr.io/cosandr/external-secrets-gopass-webhook:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            memory: 64Mi
        securityContext:
          runAsNonRoot: true
          runAsUser: 3000
          runAsGroup: 3000
          allowPrivilegeEscalation: false
        ports:
          - name: http
            containerPort: 3000
        livenessProbe: &probe
          httpGet:
            path: /health
            port: http
          periodSeconds: 10
        readinessProbe: *probe
---
apiVersion: v1
kind: Service
metadata:
  name: external-secrets-gopass-webhook
spec:
  selector:
    app.kubernetes.io/instance: external-secrets-gopass-webhook
    app.kubernetes.io/name: external-secrets-gopass-webhook
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
